--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: botframework-emulator
+name: ceph-ansible
 summary: BotFramework-Emulator is a desktop application that allows bot developers to test and debug bots built using the BotBuilder SDK.
 description: 
   
@@ -13,15 +13,15 @@ architectures:
   - build-on: arm64
 
 apps:
-  botframework-emulator:
-    command: botframework-emulator
+  ceph-ansible:
+    command: ceph-ansible
     plugs:
       - network
 
 parts:
-  botframework-emulator:
+  ceph-ansible:
     plugin: 
-    source: https://github.com/Microsoft/BotFramework-Emulator.git
+    source: https://github.com/ceph/ceph-ansible.git
     source-type: git
     override-pull: |
       snapcraftctl pull
